2005-05-17  Carl Worth  <cworth@cworth.org>

	* src/cairo-xlib-test.h: Fix to include cairo-xlib.h, (which also
	fixes test/xlib-surface.c).

2005-05-17  Carl Worth  <cworth@cworth.org>

	* test/pdf-surface.c: (main): Update to the latest PDF surface API
	changes: use filename not FILE* and use surface dimension in
	points, not inches.

2005-05-16  Keith Packard  <keithp@keithp.com>

	* src/cairo-pattern.c: (_cairo_pattern_shader_init):
	Initialize op->stops[0].scale = 0.  
	
	This scale value is used only when computing gradient values
	before the defined range, in which case stop 0 is used for both
	ends of the interpolation, making the value of 'scale' not
	actually matter, except that valgrind notices we're using
	an undefined value.

2005-05-16  Carl Worth  <cworth@cworth.org>

	* test/.cvsignore:
	* test/Makefile.am: Remove quarter-over test name accidentally
	added to Makefile.

2005-05-16  Kristian Høgsberg  <krh@redhat.com>

	* src/cairo-pdf-surface.c (cairo_pdf_surface_create):
	* src/cairo-output-stream.c
	(_cairo_output_stream_create_for_file): Take a filename instead of
	a FILE pointer.

2005-05-14  Carl Worth  <cworth@cworth.org>

	* src/cairo-xcb.h:
	* src/cairo-xcb-surface.c: (_cairo_xcb_surface_create_similar),
	(_cairo_xcb_surface_finish), (_cairo_xcb_surface_get_size),
	(_bits_per_pixel), (_bytes_per_line), (_get_image_surface),
	(_draw_image_surface), (_cairo_xcb_surface_get_extents),
	(_cairo_surface_is_xcb), (_cairo_xcb_surface_create_internal),
	(cairo_xcb_surface_create_for_pixmap),
	(cairo_xcb_surface_create_for_pixmap_with_visual),
	(cairo_xcb_surface_create_for_window_with_visual),
	(cairo_xcb_surface_set_size):
	Brush the dust off the XCB backend and get it compiling and
	working again. This patch makes the XCB surface API match that of
	the Xlib surface API as of yesterday. But, it's already stale as
	the Xlib API changed again. So we'll need one more revision of the
	XCB backend before the next snapshot.

	* test/.cvsignore: